@@ -1,3 +1,8 @@
+2009-05-25  Jason Merrill  <jason@redhat.com>
+
+	PR c++/38064
+	* g++.dg/cpp0x/enum3.C: New test.
+
 2009-05-22  Zdenek Dvorak  <ook@ucw.cz>
 
 	PR tree-optimization/40087
